--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>TiagoSaraiva.Github.IO</title>
+
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
+
+
+    <script src="js/jquery-1.11.0.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
+
+
+  </body>
+</html>
