--- a/index.html
+++ b/index.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TiagoSaraiva.Github.IO</title>
 
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-
+    <link href="css/style.css" rel="stylesheet">
 
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+</head>
+<body>
 
 
-  </body>
+    <div  class="container-fluid" id="navigation">
+        
+    </div>
+
+    <div class="container-fluid" id="my-header">
+
+        <h1>Hello, world!</h1>
+
+    </div>
+    <div class="container-fluid" id="centro">
+
+    </div>
+
+
+</body>
 </html>
