--- a/index.html
+++ b/index.html
@@ -15,17 +15,27 @@
 <body>
 
 
-    <div  class="container-fluid" id="navigation">
-        
+
+    <div class="container-fluid" id="navigation">
     </div>
+    <div id="links">
+            <a href="#">HOME</a>
+        /
+            <a href="#">ABOUT</a>
+        </div>
 
     <div class="container-fluid" id="my-header">
+
+        <div id="my-photo">
+            <img height="100" src="css/images/eu.jpg" />
+            <span>Hy, im a Tiago Saraiva, a brazilian software developer</span>
+            
+        </div>
 
         <h1>Hello, world!</h1>
 
     </div>
     <div class="container-fluid" id="centro">
-
     </div>
 
 
