--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@
         </div>
 
     </div>
-
+	<div class="container-fluid">
+		<h1>Text</h1>
+	</div>
 
     <div class="container-fluid" id="post-list">
+	
+	
         <div class="container">
 
             <div class="col-lg-3"></div>
