--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     </div>
 	<div class="container-fluid">
-		<h1>Text</h1>
+		<h1>Abacaxi</h1>
 	</div>
 
     <div class="container-fluid" id="post-list">
