Ajuste de links de navegacao

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="utf-8">
+   
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TiagoSaraiva.Github.IO</title>
@@ -19,10 +19,9 @@
 
     <div class="container-fluid" id="navigation">
     </div>
-    <div id="links">
-        <a href="#">HOME</a>
-        /
-            <a href="#">ABOUT</a>
+     <div id="links">
+        
+      <a href="http://tiagosaraiva.github.io">tiagosaraiva.github.io</a>
     </div>
 
     <div class="container-fluid" id="my-header">
