--- a/sharepoint-master-page.html
+++ b/sharepoint-master-page.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
     
+     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TiagoSaraiva.Github.IO</title>
