--- a/sharepoint-master-page.html
+++ b/sharepoint-master-page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta charset="iso-8859-1">
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TiagoSaraiva.Github.IO</title>
@@ -33,8 +33,8 @@
 
             <div class="col-lg-3"></div>
             <div class="col-lg-6">
-                <h1>T√≠tulo</h1>
-                <p>Par√°grafo</p>
+                <h1>TÌtulo</h1>
+                <p>Par·grafo</p>
 
             </div>
 
