--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-
-<html>
+<!DOCTYPE html>
+<html >
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
