--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html >
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TiagoSaraiva.Github.IO</title>
 
@@ -46,7 +48,7 @@
 
     </div>
     <div class="container-fluid">
-        <h1 class="titulo">campeão</h1>
+        <h1 class="titulo">campeãão</h1>
     </div>
 
     <div class="container-fluid" id="post-list">
