--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="col-lg-3"></div>
             <div class="col-lg-6" style="position: inherit">
                 
-                
+                yammer
                 <div id="embedded-feed" style="height:800px;width:100%;"></div>
                         <script type="text/javascript" src="https://s0.assets-yammer.com/assets/platform_embed.js"></script>
                         <script type="text/javascript">
