--- a/index.html
+++ b/index.html
@@ -46,10 +46,6 @@
         </div>
 
     </div>
-    <div class="container-fluid">
-        <h1 class="titulo">campeãão</h1>
-    </div>
-
     <div class="container-fluid" id="post-list">
 
 
@@ -58,7 +54,7 @@
             <div class="col-lg-3"></div>
             <div class="col-lg-6" style="position: inherit">
                 
-                yammer
+                <h1>Integração com Yammer</h1>
                 <div id="embedded-feed" style="height:800px;width:100%;"></div>
                         <script type="text/javascript" src="https://s0.assets-yammer.com/assets/platform_embed.js"></script>
                         <script type="text/javascript">
